upgraded libGDX ver to 1.13.6-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ graalHelperVersion=2.0.1
 android.useAndroidX=true
 android.enableR8.fullMode=false
 enableGraalNative=false
-gdxVersion=1.13.1
+gdxVersion=1.13.6-SNAPSHOT
 projectVersion=1.0.0
